--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,8 @@
 # Centos 更新 安装基础软件工具等操作
 - block:
   - name: Install python3-dnf
-    pip:
-      name: dnf
+    yum:
+      name: https://rpmfind.net/linux/mageia/distrib/cauldron/i586/media/core/release/python3-dnf-4.2.17-4.mga8.noarch.rpm
 
   - name: System Upgrade
     dnf: name=* state=latest
