--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,1 +1,18 @@
+---
+galaxy_info:
+  role_name: common
+  author: 
+  description:
+  company: 
+  license: 
+  min_ansible_version: 
+  platforms:
+    - name: EL
+      versions:
+        - 7
+    - name: Ubuntu
+      versions:
+        - 18.04
+
+  galaxy_tags:
 
