--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -35,7 +35,7 @@
 
   - name: Install Common Software
     apt: 
-      name: [mosh,curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess]
+      name: [mosh,curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess,python3-pip]
       state: latest
       force_apt_get: True
       allow_unauthenticated: yes
