--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,7 @@
     when: ansible_distribution != 'Amazon'
 
   - name: Install Extra Packages for Enterprise Linux
-    shell: amazon-linux-extras install epel
+    shell: amazon-linux-extras install epel -y
     when: ansible_distribution == 'Amazon'
 
 
