--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,14 +18,12 @@
       name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
     
 
+  - shell: setenforce 0
+  
   - name: Disable SELinux
     selinux:
       state: disabled
-
-  - reboot:
-      reboot_timeout: 3600
-      connect_timeout: 3600
-      
+    
   - name: Install PiP
     yum:
       name: python-pip
