--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
       name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
     
   - shell: setenforce 0
-    when: ansible_selinux.status == 'disabled'
+    when: ansible_selinux.status != 'disabled'
 
   - name: Disable SELinux
     selinux:
