--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: add Dns
   shell: echo -e "nameserver 119.29.29.29\nnameserver 114.114.114.114" >> /etc/resolv.conf; cat /etc/resolv.conf
-  register: dns_statu
+  register: dns_status
 
-- debug: msg="{{dns_statu.stdout}}"
+- debug: msg="{{dns_status.stdout}}"
 # Centos 更新 安装基础软件工具等操作
 - block:
   - name: System Upgrade
