--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,13 @@
-- name: add Dns
+- name: add DNS for Chinese region
   shell: echo -e "nameserver 119.29.29.29\nnameserver 114.114.114.114" >> /etc/resolv.conf; cat /etc/resolv.conf
   register: dns_status
+  when: region =='1' or region == 1
 
 - debug: msg="{{dns_status.stdout}}"
+
+
 # Centos 更新 安装基础软件工具等操作
+
 - block:
   - name: System Upgrade
     yum: name=* state=latest
