--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,11 @@
-- name: add DNS for Chinese region
-  shell: echo -e "nameserver 119.29.29.29\nnameserver 114.114.114.114" >> /etc/resolv.conf; cat /etc/resolv.conf
-  register: dns_status
+- block:
+  - name: add DNS for Chinese region
+    shell: echo -e "nameserver 119.29.29.29\nnameserver 114.114.114.114" >> /etc/resolv.conf; cat /etc/resolv.conf
+    register: dns_status
+  
+  - debug: msg="{{dns_status.stdout}}"
+  
   when: region =='1' or region == 1
-
-- debug: msg="{{dns_status.stdout}}"
-
 
 # Centos 更新 安装基础软件工具等操作
 
