--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,7 +27,8 @@
     yum: 
       name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
     
-  - shell: setenforce 0
+  - name: Disable SELinux temporarily
+    shell: sudo setenforce 0
     when: ansible_selinux.status != 'disabled'
 
   - name: Disable SELinux
@@ -39,7 +40,6 @@
     yum:
       name: python-pip
     when: ansible_python.version.major == 2
-
 
   when: ansible_os_family == 'RedHat'
 
