--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,65 +7,15 @@
   
   when: region =='1' or region == 1
 
-# Centos 更新 安装基础软件工具等操作
+# 根据不同的操作系统，更新、安装基础软件工具等操作
 
-- block:
-  - name: System Upgrade
-    yum: name=* state=latest
+- debug:
+    msg: Will install components on {{ ansible_distribution }} 
 
-  - name: Install Extra Packages for Enterprise Linux
-    yum: 
-      name: epel-release
-    when: ansible_distribution != 'Amazon'
-
-  - name: Install Extra Packages for Enterprise Linux
-    shell: amazon-linux-extras install epel -y
-    when: ansible_distribution == 'Amazon'
+- include: "{{ansible_os_family}}.yml"
 
 
-  - name: Install Common Software
-    yum: 
-      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
-    
-  - shell: setenforce 0
-    when: ansible_selinux.status != 'disabled'
-
-  - name: Disable SELinux
-    selinux:
-      state: disabled
-    when: ansible_selinux.status != 'disabled'
-    
-  - name: Install PiP
-    yum:
-      name: python-pip
-    when: ansible_python.version.major == 2
-
-
-  when: ansible_os_family == 'RedHat'
-
-# Ubuntu 更新 安装基础软件工具等操作
-- block:
-  - name: Wait for sudo
-    become: yes
-    shell:  while sudo fuser /var/lib/dpkg/lock >/dev/null 2>&1; do sleep 5; done;
-    
-  - name: Upgrade all packages to the latest version
-    apt:
-      name: "*"
-      state: latest
-      update_cache: yes
-      force_apt_get: True
-      autoremove: yes
-
-  - name: Install Common Software
-    apt: 
-      name: [mosh,curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess,python3-pip]
-      state: latest
-      force_apt_get: True
-      allow_unauthenticated: yes
-  
-  when: ansible_os_family == 'Debian'
-
+# pip处理
 - name: pip upgrade
   shell: python{{ansible_python.version.major}} -m pip install -U pip
   
@@ -73,6 +23,7 @@
   pip:
     name: pexpect
 
+# 系统设置
 - name: Set swapiness
   sysctl:
     name: vm.swappiness
@@ -83,6 +34,7 @@
     name: fs.inotify.max_user_watches
     value: "8192000"
 
+# 准备基本目录
 - name: Create Dir
   file:
     path: '/data/{{item}}'
