--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,12 +1,12 @@
 - name: System Upgrade
   yum: name=* state=latest
 
-- name: Install Extra Packages for Enterprise Linux
+- name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
   yum: 
     name: epel-release
   when: ansible_distribution != 'Amazon'
 
-- name: Install Extra Packages for Enterprise Linux
+- name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
   shell: amazon-linux-extras install epel -y
   when: ansible_distribution == 'Amazon'
 
@@ -15,10 +15,11 @@
   yum: 
     name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
   
-- shell: setenforce 0
+- name: Disable SELinux temporarily
+  shell: sudo setenforce 0
   when: ansible_selinux.status != 'disabled'
 
-- name: Disable SELinux
+- name: Disable SELinux ermanently
   selinux:
     state: disabled
   when: ansible_selinux.status != 'disabled'
