--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
 - include: "{{ansible_os_family}}.yml"
 
 
-# pip处理
+# Python模块处理
 - name: pip upgrade
   shell: python{{ansible_python.version.major}} -m pip install -U pip
   
