--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -12,7 +12,7 @@
 
 - name: Install Common Software
   apt: 
-    name: [mosh,curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess,python3-pip]
+    name: [mosh,curl,gnupg2,ca-certificates,lsb-release,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,imagemagick,goaccess]
     state: latest
     force_apt_get: True
     allow_unauthenticated: yes
