--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -10,10 +10,18 @@
   shell: amazon-linux-extras install epel -y
   when: ansible_distribution == 'Amazon'
 
+block:
+  - name: Install Common Software
+    yum: 
+      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
 
-- name: Install Common Software
-  yum: 
-    name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
+  # Is this need here?
+  - name: Install PiP for python2
+    yum:
+      name: python-pip
+    when: ansible_python.version.major == 2
+
+  when: common_install_components
   
 - name: Disable SELinux temporarily
   shell: sudo setenforce 0
@@ -24,7 +32,3 @@
     state: disabled
   when: ansible_selinux.status != 'disabled'
   
-- name: Install PiP
-  yum:
-    name: python-pip
-  when: ansible_python.version.major == 2
