--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,7 +5,7 @@
 
 
 # Python模块处理
-block:
+- block:
   - name: pip upgrade
     shell: python{{ansible_python.version.major}} -m pip install -U pip
     
