--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,3 +40,11 @@
       - cert
       - wwwroot
   when: ansible_distribution != 'OracleLinux'
+  
+# set a regular hostname
+- block:
+  - name: hostname rename
+    shell: get_hostname=$(hostname);echo ${get_hostname%.*}
+    register: common_get_hostname
+  - hostname:
+      name: {{common_get_hostname.stdout}}
