--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,4 @@ region: "0"
 #Control installation more components
 common_install_python_modules: True
 common_install_components: True
+common_set_rclocal: False
