--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -17,3 +17,17 @@
     force_apt_get: True
     allow_unauthenticated: yes
   when: common_install_components
+
+- block:
+  - name: Setting rc.local
+    file:
+      path: /etc/rc.local
+      state: touch
+      mode: 0750
+
+  - name: Write rc.local
+    shell: echo "#!/bin/bash" > /etc/rc.local
+
+  - name: restart rc.local
+    service: name=rc.local state=restarted enabled=yes
+  when: common_set_rclocal
