--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,4 @@ region: "0"
 common_install_python_modules: True
 common_install_components: True
 common_set_rclocal: False
+common_system_upgrade: True
