--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,10 @@
 region: "0"
+init: "0"
 
 #Control installation more components
 common_install_python_modules: True
 common_install_components: True
 common_set_rclocal: False
+
+# when init=1, need upgrade system
 common_system_upgrade: True
