--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,5 +1,6 @@
 - name: System Upgrade
   yum: name=* state=latest
+  when: common_system_upgrade and (init == '1' or init == 1)
 
 - name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
   yum: 
