--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -9,6 +9,7 @@
     update_cache: yes
     force_apt_get: True
     autoremove: yes
+  when: common_system_upgrade and (init == '1' or init == 1)
 
 - name: Install Common Software
   apt: 
