--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -14,8 +14,11 @@
 - block:
   - name: Install Common Software
     yum: 
-      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
+      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,mlocate,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python]
     when: ansible_distribution != 'OracleLinux'
+  
+  - name: update db for locate
+    shell: updatedb
 
   when: common_install_components
   
