--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
     msg: Will install components on {{ ansible_distribution }} 
     
 - name: Check OS support, if not support, exit ansible
-  shell: 
+  shell: exit
   when: ansible_distribution not in common_os_support
 
 - include: "{{ansible_os_family}}.yml"
