--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -4,7 +4,7 @@
 
 - name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
   yum: 
-    name: epel-release
+    name: [epel-release,centos-release-scl]
   when: ansible_distribution != 'Amazon' and ansible_distribution != 'OracleLinux'
 
 - name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
