--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -16,7 +16,7 @@
 - block:
   - name: Install Common Software
     yum: 
-      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python,yum-utils,dnf]
+      name: [mosh,wget,openssl,unzip,bzip2,expect,at,vim,screen,pwgen,git,htop,ImageMagick,inotify-tools,libselinux-python,yum-utils]
     when: ansible_distribution != 'OracleLinux'
   
   - name: intall mlocate
