--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -10,7 +10,9 @@
   when: ansible_distribution != 'Amazon' and ansible_distribution != 'OracleLinux'
 
 - name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
-  shell: amazon-linux-extras install epel -y
+  shell: |
+    amazon-linux-extras install epel -y
+    wget -O /etc/yum.repos.d/CentOS-Base.repo https://raw.githubusercontent.com/websoft9dev/role_common/master/files/CentOS7-Base.repo
   when: ansible_distribution == 'Amazon'
 
 - block:
