--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -9,10 +9,10 @@
     state: latest
   when: ansible_distribution != 'Amazon' and ansible_distribution != 'OracleLinux'
 
-- name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}}
+- name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}},there is [releaseserver] in the linux repo,so download from websoft9 self repo 
   shell: |
     amazon-linux-extras install epel -y
-    wget -O /etc/yum.repos.d/CentOS-Base.repo https://raw.githubusercontent.com/websoft9dev/role_common/master/files/CentOS7-Base.repo
+    wget -O /etc/yum.repos.d/CentOS7-Base.repo https://raw.githubusercontent.com/websoft9dev/role_common/master/files/CentOS7-Base.repo
   when: ansible_distribution == 'Amazon'
 
 - block:
