--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -15,7 +15,7 @@
     wget -O /etc/yum.repos.d/CentOS7-Base.repo https://raw.githubusercontent.com/websoft9dev/role_common/master/files/CentOS7-Base.repo
   when: ansible_distribution == 'Amazon'
   
-- name: Change postgresql databases directory
+- name: delete amazon repo priority
   lineinfile:
       dest: "{{item}}"
       regexp: "^priority"
