--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -8,21 +8,21 @@
     update_cache: yes
     state: latest
   when: ansible_distribution != 'Amazon' and ansible_distribution != 'OracleLinux'
-
-- name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}},there is [releaseserver] in the linux repo,so download from websoft9 self repo 
-  shell: |
-    amazon-linux-extras install epel -y
-    wget -O /etc/yum.repos.d/CentOS7-Base.repo https://raw.githubusercontent.com/websoft9dev/role_common/master/files/CentOS7-Base.repo
-  when: ansible_distribution == 'Amazon'
   
-- name: delete amazon repo priority
-  lineinfile:
-      dest: "{{item}}"
-      regexp: "^priority"
-      state: absent
-  loop:
-    - /etc/yum.repos.d/amzn2-extras.repo
-    - /etc/yum.repos.d/amzn2-core.repo
+- block:
+  - name: Install Extra Packages for Enterprise Linux on {{ansible_distribution}},there is [releaseserver] in the linux repo,so download from websoft9 self repo 
+    shell: |
+      amazon-linux-extras install epel -y
+      wget -O /etc/yum.repos.d/CentOS7-Base.repo https://raw.githubusercontent.com/websoft9dev/role_common/master/files/CentOS7-Base.repo
+
+  - name: delete amazon repo priority
+    lineinfile:
+        dest: "{{item}}"
+        regexp: "^priority"
+        state: absent
+    loop:
+      - /etc/yum.repos.d/amzn2-extras.repo
+      - /etc/yum.repos.d/amzn2-core.repo
   when: ansible_distribution == 'Amazon'
 
 - block:
