--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,3 +10,6 @@ common_os_support: ["CentOS", "Ubuntu", "Amazon", "OracleLinux"]
 
 # when init=1, need upgrade system
 common_system_upgrade: True
+
+# Useful tools, e.g: cockpit
+common_tools:
