--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,4 +1,4 @@
-- name: Wait for sudo
+- name: Check dpkg lock
   become: yes
   shell:  while sudo fuser /var/lib/dpkg/lock >/dev/null 2>&1; do sleep 5; done;
   
