--- a/tasks/tools_cockpit.yml
+++ b/tasks/tools_cockpit.yml
@@ -19,7 +19,7 @@
 #3 Configure
 - name: Change cockpit port 
   lineinfile:
-      dest: /usr/lib/systemd/system/cockpit.socket
+      dest: /lib/systemd/system/cockpit.socket
       regexp: "ListenStream=9090"
       line: "ListenStream={{common_cockpit_port}}"
       backrefs: yes 
@@ -36,8 +36,6 @@
   blockinfile:
     path: /etc/cockpit/cockpit.conf
     block: |
-      [Log]
-      Fatal = criticals
       # allow http connection, Otherwise, it redirects all HTTP connections to HTTPS
       [WebService]
       AllowUnencrypted = true
@@ -45,6 +43,8 @@
 - name: Start & Enable cockpit
   shell: |
     systemctl restart cockpit
+    systemctl daemon-reload
+    systemctl restart cockpit.socket
     systemctl enable --now cockpit.socket
     
 #4 Check
