--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,7 +24,7 @@
 - name: Install tools
   include_tasks: tools_{{item}}.yml
   with_items: "{{common_install_tools}}"
-  when: common_install_tools is defined and common_install_tools is not none and common_install_tools != ""
+  when: common_install_tools is defined and common_install_tools is not none and common_install_tools != "" and common_install_tools[0]!= ""
 
 #4 Configure
 - name: Create common folder
