--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,8 @@
 #1 Common install by OS
+- name: Because oracle linux install pip,python slowly,sleep 300s
+  shell: sleep 300s
+  when: == "OracleLinux"
+    
 - debug:
     msg: Will install components on {{ ansible_distribution }}
   
