--- a/tasks/tools_snap.yml
+++ b/tasks/tools_snap.yml
@@ -3,24 +3,32 @@
     apt: 
       name: snapd
       update_cache: yes
+      
+  - name: Create link
+    shell:  ln -sf /root/snap /data/wwwroot 
   when: ansible_os_family == "Debian" 
 
 # use yumdownloader and rpm install requires package,waiting for rhel official update repo
 - block:
-  - name: Install requires package
+  - name: Install requires package and remove on second installation
     shell: |
       yumdownloader snapd-selinux-2.47.1-1.el7.noarch
       rpm --force --nodeps -ivh snapd-selinux-2.47.1-1.el7.noarch.rpm
+      test -e snapd-selinux-* && rm -rf snapd-selinux-*.rpm
       
   - name: Install snap tools
     yum: 
       name: snapd
-      update_cache: yes      
+      update_cache: yes
+      
+  - name: enable and create link for snap
+    shell: |
+      systemctl enable --now snapd.socket
+      ln -sf /var/lib/snapd/snap /data/wwwroot 
   when: ansible_os_family == "RedHat"
   
 - name: Install and upgrade core 
   shell: |
     snap install core 
     snap refresh core
-    test -d  /root/snap && mv /root/snap /data/wwwroot
   failed_when: false
